(Format: Year/Month/Day)
Changes for 0.9.2:
*03/05/08:
   * Fixed Slit ordering bug (Henrik)
     Screen.cc
   * Fixed better command help/option
     main.cc
   * Fixed Slit redrawing bug (Henrik)
     Slit.hh/cc
*03/05/07:
   * Fix crash when detaching client that isn't active (Simon)
     Window.cc
   * Fixed transient grouping issues (transients now WinClients) (Simon)
     WinClient.hh/cc Window.hh/cc Workspace.cc Screen.cc     
   * Fixed screen problem with redrawing menus (Henrik)
     The m_screen_num wasn't set in X Window assignment operator
     FbTk/FbWindow.cc
   * Fixed check for RENDER extension before we start using it (Henrik)
     FbTk/Transparent.hh/cc
   * Fixed some bugs and minor cleaning (Thanks MrChuoi)
     fluxbox.cc, FbTk/Button.cc, FbTk/RefCount.hh
	 LayerMenu.hh, 
     Resource.hh, Window.cc[focus on deiconify]
*03/05/05:
   * Added window.<button name>.unfocus.pixmap  theme item  (Henrik)
     WinButtonTheme.hh/cc, WinButton.cc
   * Rework focus somewhat - now use Fluxbox::revertFocus when a window 
     dies/gets forced out of focus (Simon)
     - should fix click focus sometimes acting sloppy     
     fluxbox.hh/cc Screen.hh/cc WinClient.cc Workspace.cc Ewmh.cc
*03/05/04:
   * add session.ignoreBorder - ignores window border with movement (Simon)
     fluxbox.hh/cc Window.cc
   * Fix warping with multiple screens (Simon)
     Window.cc
   * Set many key events/commands to act on the screen the mouse is on,
     rather than the focused window (Simon)
     fluxbox.cc
   * Fix segfault on restart with iconic windows (Simon)
     Screen.cc
*03/05/01:
   * Fix slit autohide triggering (Simon)
     Slit.cc
   * Clean ups and optimising of redraw/reconfigures
     Also fixes warping in outline focus bug (Simon)
     Window.hh/cc FbWinFrame.hh/cc
*03/04/29:
   * fix cause of (some?) excessive reconfigures (Simon)
     fluxbox.cc
   * fix fbsetbg relative path bug + simplify (Han)
     util/fbsetbg
   * Added FbDrawable.hh/cc (Henrik)